--- a/css/styles.css
+++ b/css/styles.css
@@ -836,6 +836,7 @@ background-color: #2196f3;
   width: 528px;
   height: 580px;
   background-color: rgba(255, 255, 255);
+  padding: 40px;
 }
 
 .modal-close-btn {
@@ -852,4 +853,80 @@ background-color: #2196f3;
   background-color: transparent;
   padding: 0;
   cursor: pointer;
+}
+
+.contact-form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-form-data {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 14px;
+/* identical to box height */
+
+letter-spacing: 0.01em;
+
+color: #757575
+}
+
+.contact-form-input-wrapper {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus {
+  outline: none;
+  border-color: #2196f3;
+}
+
+.contact-form-input:focus + .contact-form-icon {
+  fill: #2196f3;
+}
+
+.contact-form-icon {
+  position: absolute ;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: block; 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message{
+  width: 100%; 
+  height: 120px;
+  margin-top: 4px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px; 
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message:focus {
+  outline: none;
+  border-color: #2196f3;
+}
+
+.contact-form-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
