--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,19 @@ body{
   border: 1px solid #ECECEC;
 }
 
+.visual-hiden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -929,4 +942,35 @@ color: #757575
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
+}
+
+.contatc-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  /* identical to box height, or 171% */
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.contatc-form-checkbox-label::before {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #555555 ;
+  cursor: pointer;
+  content: "";
+  margin-right: 10px;
+}
+
+.contact-form-checkbox:checked + .contatc-form-checkbox-label::before{
+  background-image: url("../images/icons/checkbox.svg");
+  background-color: #2196f3;
+  box-shadow: 0 0 0 4px #FFFFFF;
+  background-size: cover;
+
 }
