--- a/css/styles.css
+++ b/css/styles.css
@@ -282,11 +282,12 @@ body{
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
+  border: none;
 }
 
 .services-btn:hover,
 .services-btn:focus {
-
+  background-color: #188CE8;
 }
 
 .second-section {
@@ -622,6 +623,77 @@ body{
 background-color: #2196f3;
 }
 
+.subscribe-block {
+  margin-left: auto;
+}
+
+.subscribe-content {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.subscribe-block input {
+  margin-right: 12px;
+  padding: 15px;
+  width: 358px;
+  border-color: inherit;
+  background-color: #2f303a;
+  color: #FFFFFF;
+  outline: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-block input:hover,
+.subscribe-block input:focus {
+  border: 1px solid #2196f3;
+}
+
+.subscribe-btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 10px 28px;
+  width: 200px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  background-color: #2196f3;
+  border-color: #2196f3;
+  box-shadow: 0pc 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: backgroudn-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  border: none;
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: #188CE8;
+}
+
+.subscribe-icon {
+  fill: #FFFFFF;
+  margin-left: 10px;
+}
+
+.subscribe-title{
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+
+
 .logo-footer {
   width: 145px;
   height: 31px;
@@ -723,6 +795,7 @@ background-color: #2196f3;
 
   color: #212121;
   cursor: pointer;
+  border: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -944,9 +1017,14 @@ color: #757575
   color: rgba(117, 117, 117, 0.5);
 }
 
+.contact-form-checkbox-wrapper {
+  margin-bottom: 30px;
+}
+
 .contatc-form-checkbox-label {
   display: flex;
   align-items: center;
+  justify-content: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -961,10 +1039,15 @@ color: #757575
   display: inline-block;
   width: 16px;
   height: 15px;
-  border: 2px solid #555555 ;
+  border: 2px solid #555555;
+  border-radius: 2px;
   cursor: pointer;
   content: "";
   margin-right: 10px;
+}
+
+.contact-form-checkbox:focus +.contatc-form-checkbox-label::before{
+  outline: 1px solid #2196f3 ;
 }
 
 .contact-form-checkbox:checked + .contatc-form-checkbox-label::before{
@@ -972,5 +1055,33 @@ color: #757575
   background-color: #2196f3;
   box-shadow: 0 0 0 4px #FFFFFF;
   background-size: cover;
+  border-color: #2196f3;
 
+}
+
+.contact-form-submit-btn {
+  display: block;
+  margin: 0 auto;
+  /* width: 200px;
+  height: 50px; */
+  padding: 10px 56px;
+  border-radius: 4px;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  /* identical to box height, or 187% */
+  cursor: pointer;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  border: none;
+}
+
+.contact-form-submit-btn:hover{
+  background-color: #188CE8;
 }
