--- a/css/styles.css
+++ b/css/styles.css
@@ -941,6 +941,23 @@ background-color: #2196f3;
   cursor: pointer;
 }
 
+.modal-close-icon:hover,
+.modal-close-icon:focus {
+  fill: #2196f3;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-title{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+  margin-bottom: 12px;
+}
+
 .contact-form-field {
   display: block;
   margin-bottom: 10px;
@@ -1057,6 +1074,10 @@ color: #757575
   background-size: cover;
   border-color: #2196f3;
 
+}
+
+.terms {
+  color: #2196f3;
 }
 
 .contact-form-submit-btn {
